feat: 添加角色卡接口
